--- a/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -92,6 +92,7 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`ArmResourceActionNoContentSync`](./interfaces.md#Azure.ResourceManager.ArmResourceActionNoContentSync)
 - [`ArmResourceActionNoResponseContentAsync`](./interfaces.md#Azure.ResourceManager.ArmResourceActionNoResponseContentAsync)
 - [`ArmResourceActionSync`](./interfaces.md#Azure.ResourceManager.ArmResourceActionSync)
+- [`ArmResourceCreateOrReplaceAsync`](./interfaces.md#Azure.ResourceManager.ArmResourceCreateOrReplaceAsync)
 - [`ArmResourceCreateOrReplaceSync`](./interfaces.md#Azure.ResourceManager.ArmResourceCreateOrReplaceSync)
 - [`ArmResourceCreateOrUpdateAsync`](./interfaces.md#Azure.ResourceManager.ArmResourceCreateOrUpdateAsync)
 - [`ArmResourceCreateOrUpdateSync`](./interfaces.md#Azure.ResourceManager.ArmResourceCreateOrUpdateSync)
@@ -101,7 +102,11 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`ArmResourceDeleteWithoutOkAsync`](./interfaces.md#Azure.ResourceManager.ArmResourceDeleteWithoutOkAsync)
 - [`ArmResourceListAtScope`](./interfaces.md#Azure.ResourceManager.ArmResourceListAtScope)
 - [`ArmResourceListByParent`](./interfaces.md#Azure.ResourceManager.ArmResourceListByParent)
+- [`ArmResourcePatchAsync`](./interfaces.md#Azure.ResourceManager.ArmResourcePatchAsync)
+- [`ArmResourcePatchSync`](./interfaces.md#Azure.ResourceManager.ArmResourcePatchSync)
 - [`ArmResourceRead`](./interfaces.md#Azure.ResourceManager.ArmResourceRead)
+- [`ArmTagsPatchAsync`](./interfaces.md#Azure.ResourceManager.ArmTagsPatchAsync)
+- [`ArmTagsPatchSync`](./interfaces.md#Azure.ResourceManager.ArmTagsPatchSync)
 - [`checkGlobalNameAvailability`](./interfaces.md#Azure.ResourceManager.checkGlobalNameAvailability)
 - [`checkLocalNameAvailability`](./interfaces.md#Azure.ResourceManager.checkLocalNameAvailability)
 
@@ -110,12 +115,16 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`ApiVersionParameter`](./data-types.md#Azure.ResourceManager.ApiVersionParameter)
 - [`ArmAcceptedLroResponse`](./data-types.md#Azure.ResourceManager.ArmAcceptedLroResponse)
 - [`ArmAcceptedResponse`](./data-types.md#Azure.ResourceManager.ArmAcceptedResponse)
+- [`ArmAsyncOperationHeader`](./data-types.md#Azure.ResourceManager.ArmAsyncOperationHeader)
+- [`ArmCombinedLroHeaders`](./data-types.md#Azure.ResourceManager.ArmCombinedLroHeaders)
 - [`ArmCreatedResponse`](./data-types.md#Azure.ResourceManager.ArmCreatedResponse)
 - [`ArmDeleteAcceptedLroResponse`](./data-types.md#Azure.ResourceManager.ArmDeleteAcceptedLroResponse)
 - [`ArmDeleteAcceptedResponse`](./data-types.md#Azure.ResourceManager.ArmDeleteAcceptedResponse)
 - [`ArmDeletedNoContentResponse`](./data-types.md#Azure.ResourceManager.ArmDeletedNoContentResponse)
 - [`ArmDeletedResponse`](./data-types.md#Azure.ResourceManager.ArmDeletedResponse)
+- [`ArmLroLocationHeader`](./data-types.md#Azure.ResourceManager.ArmLroLocationHeader)
 - [`ArmNoContentResponse`](./data-types.md#Azure.ResourceManager.ArmNoContentResponse)
+- [`ArmOperationStatus`](./data-types.md#Azure.ResourceManager.ArmOperationStatus)
 - [`ArmResourceCreatedResponse`](./data-types.md#Azure.ResourceManager.ArmResourceCreatedResponse)
 - [`ArmResourceCreatedSyncResponse`](./data-types.md#Azure.ResourceManager.ArmResourceCreatedSyncResponse)
 - [`ArmResourceUpdatedResponse`](./data-types.md#Azure.ResourceManager.ArmResourceUpdatedResponse)
