Fixing spelling errors and regeneratign docs

--- a/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -138,6 +138,7 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`ExtensionResource`](./data-types.md#Azure.ResourceManager.ExtensionResource)
 - [`KeysOf`](./data-types.md#Azure.ResourceManager.KeysOf)
 - [`LocationParameter`](./data-types.md#Azure.ResourceManager.LocationParameter)
+- [`LocationResourceParameter`](./data-types.md#Azure.ResourceManager.LocationResourceParameter)
 - [`ManagedBy`](./data-types.md#Azure.ResourceManager.ManagedBy)
 - [`ManagedServiceIdentity`](./data-types.md#Azure.ResourceManager.ManagedServiceIdentity)
 - [`ManagedSystemAssignedIdentity`](./data-types.md#Azure.ResourceManager.ManagedSystemAssignedIdentity)
@@ -164,6 +165,8 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`ResourceSku`](./data-types.md#Azure.ResourceManager.ResourceSku)
 - [`ResourceUriParameter`](./data-types.md#Azure.ResourceManager.ResourceUriParameter)
 - [`SubscriptionIdParameter`](./data-types.md#Azure.ResourceManager.SubscriptionIdParameter)
+- [`SubscriptionLocationResource`](./data-types.md#Azure.ResourceManager.SubscriptionLocationResource)
+- [`TenantLocationResource`](./data-types.md#Azure.ResourceManager.TenantLocationResource)
 - [`TrackedResource`](./data-types.md#Azure.ResourceManager.TrackedResource)
 
 ## Azure.ResourceManager.CommonTypes
@@ -177,6 +180,7 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 ### Models
 
 - [`ArmResource`](./data-types.md#Azure.ResourceManager.Foundations.ArmResource)
+- [`ArmResourceBase`](./data-types.md#Azure.ResourceManager.Foundations.ArmResourceBase)
 - [`ArmTagsProperty`](./data-types.md#Azure.ResourceManager.Foundations.ArmTagsProperty)
 - [`BaseParameters`](./data-types.md#Azure.ResourceManager.Foundations.BaseParameters)
 - [`CheckNameAvailabilityRequest`](./data-types.md#Azure.ResourceManager.Foundations.CheckNameAvailabilityRequest)
