feat(decorator): add `@flattenProperty`
- implement `@flattenProperty`
- implement `shouldFlattenProperty` utility function
- add test cases

resolve #13

# Conflicts:
#	packages/typespec-client-generator-core/test/decorators.test.ts

--- a/docs/libraries/typespec-client-generator-core/reference/index.mdx
+++ b/docs/libraries/typespec-client-generator-core/reference/index.mdx
@@ -44,6 +44,7 @@ npm install --save-peer @azure-tools/typespec-client-generator-core
 - [`@clientFormat`](./decorators.md#@Azure.ClientGenerator.Core.clientFormat)
 - [`@convenientAPI`](./decorators.md#@Azure.ClientGenerator.Core.convenientAPI)
 - [`@exclude`](./decorators.md#@Azure.ClientGenerator.Core.exclude)
+- [`@flattenProperty`](./decorators.md#@Azure.ClientGenerator.Core.flattenProperty)
 - [`@include`](./decorators.md#@Azure.ClientGenerator.Core.include)
 - [`@internal`](./decorators.md#@Azure.ClientGenerator.Core.internal)
 - [`@operationGroup`](./decorators.md#@Azure.ClientGenerator.Core.operationGroup)
