Relaxing camel case linting rule and adding a standard filter parameter

--- a/docs/libraries/azure-core/reference/index.mdx
+++ b/docs/libraries/azure-core/reference/index.mdx
@@ -91,6 +91,7 @@ npm install --save-peer @azure-tools/typespec-azure-core
 - [`EtagProperty`](./data-types.md#Azure.Core.EtagProperty)
 - [`EtagResponseEnvelope`](./data-types.md#Azure.Core.EtagResponseEnvelope)
 - [`ExpandQueryParameter`](./data-types.md#Azure.Core.ExpandQueryParameter)
+- [`FilterParameter`](./data-types.md#Azure.Core.FilterParameter)
 - [`FilterQueryParameter`](./data-types.md#Azure.Core.FilterQueryParameter)
 - [`MaxPageSizeQueryParameter`](./data-types.md#Azure.Core.MaxPageSizeQueryParameter)
 - [`OrderByQueryParameter`](./data-types.md#Azure.Core.OrderByQueryParameter)
