working with tuple list

--- a/docs/libraries/typespec-client-generator-core/reference/index.mdx
+++ b/docs/libraries/typespec-client-generator-core/reference/index.mdx
@@ -42,6 +42,7 @@ npm install --save-peer @azure-tools/typespec-client-generator-core
 - [`@access`](./decorators.md#@Azure.ClientGenerator.Core.access)
 - [`@client`](./decorators.md#@Azure.ClientGenerator.Core.client)
 - [`@clientFormat`](./decorators.md#@Azure.ClientGenerator.Core.clientFormat)
+- [`@clientName`](./decorators.md#@Azure.ClientGenerator.Core.clientName)
 - [`@convenientAPI`](./decorators.md#@Azure.ClientGenerator.Core.convenientAPI)
 - [`@exclude`](./decorators.md#@Azure.ClientGenerator.Core.exclude)
 - [`@flattenProperty`](./decorators.md#@Azure.ClientGenerator.Core.flattenProperty)
