Updating RM names

--- a/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -182,9 +182,9 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`ArmResource`](./data-types.md#Azure.ResourceManager.Foundations.ArmResource)
 - [`ArmResourceBase`](./data-types.md#Azure.ResourceManager.Foundations.ArmResourceBase)
 - [`ArmTagsProperty`](./data-types.md#Azure.ResourceManager.Foundations.ArmTagsProperty)
-- [`BaseParameters`](./data-types.md#Azure.ResourceManager.Foundations.BaseParameters)
 - [`CheckNameAvailabilityRequest`](./data-types.md#Azure.ResourceManager.Foundations.CheckNameAvailabilityRequest)
 - [`CheckNameAvailabilityResponse`](./data-types.md#Azure.ResourceManager.Foundations.CheckNameAvailabilityResponse)
+- [`DefaultBaseParameters`](./data-types.md#Azure.ResourceManager.Foundations.DefaultBaseParameters)
 - [`ErrorAdditionalInfo`](./data-types.md#Azure.ResourceManager.Foundations.ErrorAdditionalInfo)
 - [`ErrorDetail`](./data-types.md#Azure.ResourceManager.Foundations.ErrorDetail)
 - [`ExtensionBaseParameters`](./data-types.md#Azure.ResourceManager.Foundations.ExtensionBaseParameters)
