--- a/docs/howtos/DataPlane Generation - DPG/02client.mdx
+++ b/docs/howtos/DataPlane Generation - DPG/02client.mdx
@@ -299,7 +299,7 @@ import "@azure-tools/typespec-client-generator-core";
 
 using Azure.ClientGenerator.Core;
 
-@@projectedName(PetStore, "client", "PetStoreGreatClient");
+@@clientName(PetStore, "PetStoreGreatClient");
 ```
 
 </TabItem>
