--- a/docs/howtos/DataPlane Generation - DPG/04renaming.mdx
+++ b/docs/howtos/DataPlane Generation - DPG/04renaming.mdx
@@ -46,7 +46,26 @@ FIXME
 <TabItem value="csharp" label="CSharp" >
 
 ```csharp
-FIXME
+namespace PetStoreNamespace.Models
+{
+  public partial class InputModel
+  {
+    public string Name { get; }
+  }
+}
+
+namespace PetStoreNamespace
+{
+  public partial class PetStoreNamespaceClient
+  {
+    // protocol method
+    public virtual async Task<Response> GetModelAsync(string name, RequestContext context)
+    public virtual Response GetModel(string name, RequestContext context)
+    // convenience method
+    public virtual async Task<Response<InputModel>> GetModelAsync(string name, CancellationToken cancellationToken = default)
+    public virtual Response<InputModel> GetModel(string name, CancellationToken cancellationToken = default)
+  }
+}
 ```
 
 </TabItem>
@@ -121,7 +140,26 @@ FIXME
 <TabItem value="csharp" label="CSharp" >
 
 ```c#
-FIXME
+namespace PetStoreNamespace.Models
+{
+  public partial class ParameterOptions
+  {
+    public string Name { get; }
+  }
+}
+
+namespace PetStoreNamespace
+{
+  public partial class PetStoreNamespaceClient
+  {
+    // protocol method
+    public virtual async Task<Response> GetModelAsync(string name, RequestContext context)
+    public virtual Response GetModel(string name, RequestContext context)
+    // convenience method
+    public virtual async Task<Response<ParameterOptions>> GetModelAsync(string name, CancellationToken cancellationToken = default)
+    public virtual Response<ParameterOptions> GetModel(string name, CancellationToken cancellationToken = default)
+  }
+}
 ```
 
 </TabItem>
@@ -177,7 +215,26 @@ client.get_computed_model()
 <TabItem value="csharp" label="CSharp" >
 
 ```csharp
-FIXME
+namespace PetStoreNamespace.Models
+{
+  public partial class InputModel
+  {
+    public string Name { get; }
+  }
+}
+
+namespace PetStoreNamespace
+{
+  public partial class PetStoreNamespaceClient
+  {
+    // protocol method
+    public virtual async Task<Response> ReadModelAsync(string name, RequestContext context)
+    public virtual Response ReadModel(string name, RequestContext context)
+    // convenience method
+    public virtual async Task<Response<InputModel>> ReadModelAsync(string name, CancellationToken cancellationToken = default)
+    public virtual Response<InputModel> ReadModel(string name, CancellationToken cancellationToken = default)
+  }
+}
 ```
 
 </TabItem>
