update for python

--- a/docs/howtos/DataPlane Generation - DPG/04renaming.mdx
+++ b/docs/howtos/DataPlane Generation - DPG/04renaming.mdx
@@ -35,11 +35,10 @@ op GetModel is ResourceRead<InputModel>;
 <TabItem value="python" label="Python">
 
 ```python
-class OutputModel:
+class InputModel:
   name: str = rest_field(readonly=True)
 
-response: OutputModel = client.get(name="name")
-FIXME
+response: InputModel = client.get(name="name")
 ```
 
 </TabItem>
@@ -112,9 +111,8 @@ using Azure.ClientGenerator.Core;
 <TabItem value="python" label="Python">
 
 ```python
-class OutputOptions:
-  output_name: str = rest_field(rest_name="name", readonly=True)
-FIXME
+class InputOptions:
+  input_name: str = rest_field(rest_name="name", readonly=True)
 ```
 
 </TabItem>
@@ -170,7 +168,6 @@ using Azure.ClientGenerator.Core;
 
 ```python
 client.get_computed_model()
-# FIXME
 ```
 
 </TabItem>
