--- a/docs/howtos/DataPlane Generation - DPG/03convenient.mdx
+++ b/docs/howtos/DataPlane Generation - DPG/03convenient.mdx
@@ -58,11 +58,11 @@ namespace PetStoreNamespace
   public partial class PetStoreNamespaceClient
   {
     // protocol method
-    public virtual async Task<Response> GetModelAsync(string name, RequestContext context)
-    public virtual Response GetModel(string name, RequestContext context)
+    public virtual async Task<Response> GetModelAsync(string name, RequestContext context) {}
+    public virtual Response GetModel(string name, RequestContext context) {}
     // convenience method
-    public virtual async Task<Response<OutputModel>> GetModelAsync(string name, CancellationToken cancellationToken = default)
-    public virtual Response<OutputModel> GetModel(string name, CancellationToken cancellationToken = default)
+    public virtual async Task<Response<OutputModel>> GetModelAsync(string name, CancellationToken cancellationToken = default) {}
+    public virtual Response<OutputModel> GetModel(string name, CancellationToken cancellationToken = default) {}
   }
 }
 ```
@@ -147,8 +147,8 @@ namespace PetStoreNamespace
   public partial class PetStoreNamespaceClient
   {
     // protocol method
-    public virtual async Task<Response> GetModelAsync(string name, RequestContext context)
-    public virtual Response GetModel(string name, RequestContext context)
+    public virtual async Task<Response> GetModelAsync(string name, RequestContext context) {}
+    public virtual Response GetModel(string name, RequestContext context) {}
   }
 }
 ```
@@ -221,11 +221,11 @@ namespace PetStoreNamespace
   public partial class PetStoreNamespaceClient
   {
     //protocol method
-    internal virtual async Task<Response> GetModelAsync(string name, RequestContext context)
-    internal virtual Response GetModel(string name, RequestContext context)
+    internal virtual async Task<Response> GetModelAsync(string name, RequestContext context) {}
+    internal virtual Response GetModel(string name, RequestContext context) {}
     //convenience method
-    internal virtual async Task<Response<OutputModel>> GetModelAsync(string name, CancellationToken cancellationToken = default)
-    internal virtual Response<OutputModel> GetModel(string name, CancellationToken cancellationToken = default)
+    internal virtual async Task<Response<OutputModel>> GetModelAsync(string name, CancellationToken cancellationToken = default) {}
+    internal virtual Response<OutputModel> GetModel(string name, CancellationToken cancellationToken = default) {}
   }
 }
 ```
@@ -268,7 +268,7 @@ changes the way the API is exposed for those models.
 
 By default, the code generator will infer the usage based on the TypeSpec. If this inference doesn't
 correspond to expectation, this can be customized with the `usage` decorator. Possible values are
-`input` and `ouput`, and can be combined with `Usage.input | Usage.output`.
+`input` and `output`, and can be combined with `Usage.input | Usage.output`.
 
 > **NOTE:** If a model is never used, it will not be generated. Assigning a usage will force generation.
 
@@ -300,8 +300,9 @@ using Azure.ClientGenerator.Core;
 <TabItem value="csharp" label="CSharp" >
 
 ```csharp
-// If a model is input-only, there will be one public constructor with all required properties as parameter.
-// And the required properties without setter. Optional properties will have both getter and setter
+// If a model is input-only, it has one public constructor with all required properties as parameters.
+// The required properties only have getter. Optional properties have both getter and setter.
+// A collection property which is not nullable only has getter whatever it is required or not.
 namespace Azure.AI.OpenAI.Models
 {
   public partial class AzureCognitiveSearchIndexFieldMappingOptions
@@ -317,10 +318,11 @@ namespace Azure.AI.OpenAI.Models
     public IList<string> ImageVectorFieldNames { get; }
   }
 }
-// If a model is output-only, there is no public constructor, and all properties only have getter, no setter.
+// If a model is output-only, it does not have any public constructor, and all properties only have getter, no setter.
 
-// If a model is roundtrip (input + output), there will be one public constructor with all required properties as parameter.
-// And all properties will have both getter and setter
+// If a model is roundtrip (input + output), it has one public constructor with all required properties as parameters.
+// All properties except colletion properties which are not nullable will have both getter and setter.
+// A collection property which is not nullable only has getter.
 namespace Azure.AI.OpenAI.Models
 {
   public partial class ImageGenerations
