--- a/docs/howtos/DataPlane Generation - DPG/04renaming.mdx
+++ b/docs/howtos/DataPlane Generation - DPG/04renaming.mdx
@@ -59,11 +59,11 @@ namespace PetStoreNamespace
   public partial class PetStoreNamespaceClient
   {
     // protocol method
-    public virtual async Task<Response> GetModelAsync(string name, RequestContext context)
-    public virtual Response GetModel(string name, RequestContext context)
+    public virtual async Task<Response> GetModelAsync(string name, RequestContext context) {}
+    public virtual Response GetModel(string name, RequestContext context) {}
     // convenience method
-    public virtual async Task<Response<InputModel>> GetModelAsync(string name, CancellationToken cancellationToken = default)
-    public virtual Response<InputModel> GetModel(string name, CancellationToken cancellationToken = default)
+    public virtual async Task<Response<InputModel>> GetModelAsync(string name, CancellationToken cancellationToken = default) {}
+    public virtual Response<InputModel> GetModel(string name, CancellationToken cancellationToken = default) {}
   }
 }
 ```
@@ -153,11 +153,11 @@ namespace PetStoreNamespace
   public partial class PetStoreNamespaceClient
   {
     // protocol method
-    public virtual async Task<Response> GetModelAsync(string name, RequestContext context)
-    public virtual Response GetModel(string name, RequestContext context)
+    public virtual async Task<Response> GetModelAsync(string name, RequestContext context) {}
+    public virtual Response GetModel(string name, RequestContext context) {}
     // convenience method
-    public virtual async Task<Response<ParameterOptions>> GetModelAsync(string name, CancellationToken cancellationToken = default)
-    public virtual Response<ParameterOptions> GetModel(string name, CancellationToken cancellationToken = default)
+    public virtual async Task<Response<ParameterOptions>> GetModelAsync(string name, CancellationToken cancellationToken = default) {}
+    public virtual Response<ParameterOptions> GetModel(string name, CancellationToken cancellationToken = default) {}
   }
 }
 ```
@@ -228,11 +228,11 @@ namespace PetStoreNamespace
   public partial class PetStoreNamespaceClient
   {
     // protocol method
-    public virtual async Task<Response> ReadModelAsync(string name, RequestContext context)
-    public virtual Response ReadModel(string name, RequestContext context)
+    public virtual async Task<Response> ReadModelAsync(string name, RequestContext context) {}
+    public virtual Response ReadModel(string name, RequestContext context) {}
     // convenience method
-    public virtual async Task<Response<InputModel>> ReadModelAsync(string name, CancellationToken cancellationToken = default)
-    public virtual Response<InputModel> ReadModel(string name, CancellationToken cancellationToken = default)
+    public virtual async Task<Response<InputModel>> ReadModelAsync(string name, CancellationToken cancellationToken = default) {}
+    public virtual Response<InputModel> ReadModel(string name, CancellationToken cancellationToken = default) {}
   }
 }
 ```
