--- a/docs/howtos/DataPlane Generation - DPG/05union.mdx
+++ b/docs/howtos/DataPlane Generation - DPG/05union.mdx
@@ -114,7 +114,7 @@ public final class CompletionInput {
     public BinaryData getInput()
 }
 
-public final class Client {
+public final class AnalyzeClient {
     public Response<BinaryData> analyzeWithResponse(String mode, BinaryData image, RequestOptions requestOptions)
     public Response<BinaryData> completionsWithResponse(BinaryData input, RequestOptions requestOptions)
     public AnalyzeResult analyze(Mode mode, byte[] image)
