--- a/docs/howtos/DataPlane Generation - DPG/05union.mdx
+++ b/docs/howtos/DataPlane Generation - DPG/05union.mdx
@@ -14,6 +14,11 @@ At a glance, JS and Python supports natively union, while Java and C# will use o
 <TabItem value="typespec" label="TypeSpec" default>
 
 ```typespec
+@service({
+  title: "Analyze",
+  version: "v1",
+})
+namespace Analyze;
 @route("/analyze")
 @post
 op analyze(@query mode: "strict" | "lenient", @body image: bytes): AnalyzeResult;
@@ -46,7 +51,46 @@ def completions(input: CompletionInput) -> CompletionResult:
 <TabItem value="csharp" label="CSharp" >
 
 ```csharp
-FIXME
+// Union "strict" | "lenient" will be generate as extensible enum
+namespace Analyze.Models
+{
+  public readonly partial struct Mode : IEquatable<Mode>
+  {
+    public static Mode Strict { get; } = new Mode(StrictValue);
+    public static Mode Lenient { get; } = new Mode(LenientValue);
+  }
+}
+
+// other union which cannot be convert to enum will generate as BinaryData
+namespace Analyze.Models
+{
+  public partial class CompletionInput
+  {
+    public CompletionInput(BinaryData input)
+    public BinaryData Input { get; }
+  }
+}
+namespace Analyze
+{
+  public partial class AnalyzeClient
+  {
+    //protocol method
+    public virtual async Task<Response> AnalyzeAsync(string mode, RequestContent content, RequestContext context = null) {}
+    public virtual Response Analyze(string mode, RequestContent content, RequestContext context = null) {}
+    //convenience method
+    public virtual async Task<Response<AnalyzeResult>> AnalyzeAsync(Mode mode, BinaryData image, CancellationToken cancellationToken = default) {}
+    public virtual Response<AnalyzeResult> Analyze(Mode mode, BinaryData image, CancellationToken cancellationToken = default) {}
+
+
+    //protocol method
+    public virtual async Task<Response> CompletionsAsync(RequestContent content, RequestContext context = null) {}
+    public virtual Response Completions(RequestContent content, RequestContext context = null) {}
+    //convenience method
+    public virtual async Task<Response<CompletionResult>> CompletionsAsync(CompletionInput input, CancellationToken cancellationToken = default) {}
+    public virtual Response<CompletionResult> Completions(CompletionInput input, CancellationToken cancellationToken = default) {}
+
+  }
+}
 ```
 
 </TabItem>
@@ -70,7 +114,7 @@ public final class CompletionInput {
     public BinaryData getInput()
 }
 
-public final class Client {
+public final class AnalyzeClient {
     public Response<BinaryData> analyzeWithResponse(String mode, BinaryData image, RequestOptions requestOptions)
     public Response<BinaryData> completionsWithResponse(BinaryData input, RequestOptions requestOptions)
     public AnalyzeResult analyze(Mode mode, byte[] image)
