--- a/docs/howtos/DataPlane Generation - DPG/05union.mdx
+++ b/docs/howtos/DataPlane Generation - DPG/05union.mdx
@@ -97,7 +97,7 @@ namespace Analyze
 <TabItem value="typescript" label="Typescript" >
 
 ```typescript
-// from user experience perspective 
+// from user experience perspective
 
 export interface CompletionInput {
   input: string | string[];
@@ -107,18 +107,22 @@ export type DemoServiceContext = Client & {
   path: {
     /** Resource for '/analyze' has methods for the following verbs: post */
     (path: "/analyze"): {
-      post(options: {
-        body: string;
-        queryParameters: {
-          mode: "strict" | "lenient";
-        }
-      } & RequestParameters): StreamableMethod<Analyze200Response | AnalyzeDefaultResponse>;
+      post(
+        options: {
+          body: string;
+          queryParameters: {
+            mode: "strict" | "lenient";
+          };
+        } & RequestParameters
+      ): StreamableMethod<Analyze200Response | AnalyzeDefaultResponse>;
     };
     /** Resource for '/completions' has methods for the following verbs: post */
     (path: "/completions"): {
-      post(options: {
-        body: CompletionInput
-      } & RequestParameters): StreamableMethod<Completions200Response | CompletionsDefaultResponse>;
+      post(
+        options: {
+          body: CompletionInput;
+        } & RequestParameters
+      ): StreamableMethod<Completions200Response | CompletionsDefaultResponse>;
     };
   };
 };
@@ -200,16 +204,20 @@ export type DemoServiceContext = Client & {
   path: {
     /** Resource for '/foo' has methods for the following verbs: post */
     (path: "/foo"): {
-        post(options?: {
+      post(
+        options?: {
           body?: {
-            x: number
-          }
-        } & RequestParameters): StreamableMethod<A200Response>;
-        post(options?: {
+            x: number;
+          };
+        } & RequestParameters
+      ): StreamableMethod<A200Response>;
+      post(
+        options?: {
           body?: {
-            x: string
-          }
-        } & RequestParameters): StreamableMethod<B200Response>;
+            x: string;
+          };
+        } & RequestParameters
+      ): StreamableMethod<B200Response>;
     };
   };
 };
@@ -291,7 +299,7 @@ public Response<long> Foo(string x, Cancellation token);
 <TabItem value="typescript" label="Typescript" >
 
 ```typescript
-NOT_SUPPORTED
+NOT_SUPPORTED;
 ```
 
 </TabItem>
