--- a/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -37,6 +37,7 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 
 ### Decorators
 
+- [`@armBuiltInResource`](./decorators.md#@Azure.ResourceManager.armBuiltInResource)
 - [`@armCommonTypesVersion`](./decorators.md#@Azure.ResourceManager.armCommonTypesVersion)
 - [`@armLibraryNamespace`](./decorators.md#@Azure.ResourceManager.armLibraryNamespace)
 - [`@armProviderNamespace`](./decorators.md#@Azure.ResourceManager.armProviderNamespace)
@@ -52,6 +53,7 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`@armResourceUpdate`](./decorators.md#@Azure.ResourceManager.armResourceUpdate)
 - [`@extensionResource`](./decorators.md#@Azure.ResourceManager.extensionResource)
 - [`@locationResource`](./decorators.md#@Azure.ResourceManager.locationResource)
+- [`@resourceBaseType`](./decorators.md#@Azure.ResourceManager.resourceBaseType)
 - [`@resourceGroupResource`](./decorators.md#@Azure.ResourceManager.resourceGroupResource)
 - [`@singleton`](./decorators.md#@Azure.ResourceManager.singleton)
 - [`@subscriptionResource`](./decorators.md#@Azure.ResourceManager.subscriptionResource)
@@ -122,6 +124,7 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`ArmDeleteAcceptedResponse`](./data-types.md#Azure.ResourceManager.ArmDeleteAcceptedResponse)
 - [`ArmDeletedNoContentResponse`](./data-types.md#Azure.ResourceManager.ArmDeletedNoContentResponse)
 - [`ArmDeletedResponse`](./data-types.md#Azure.ResourceManager.ArmDeletedResponse)
+- [`ArmLocationResource`](./data-types.md#Azure.ResourceManager.ArmLocationResource)
 - [`ArmLroLocationHeader`](./data-types.md#Azure.ResourceManager.ArmLroLocationHeader)
 - [`ArmNoContentResponse`](./data-types.md#Azure.ResourceManager.ArmNoContentResponse)
 - [`ArmOperationStatus`](./data-types.md#Azure.ResourceManager.ArmOperationStatus)
@@ -155,6 +158,7 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`PrivateLinkServiceConnectionState`](./data-types.md#Azure.ResourceManager.PrivateLinkServiceConnectionState)
 - [`ProviderNamespace`](./data-types.md#Azure.ResourceManager.ProviderNamespace)
 - [`ProxyResource`](./data-types.md#Azure.ResourceManager.ProxyResource)
+- [`ResourceGroupLocationResource`](./data-types.md#Azure.ResourceManager.ResourceGroupLocationResource)
 - [`ResourceGroupParameter`](./data-types.md#Azure.ResourceManager.ResourceGroupParameter)
 - [`ResourceIdentifierAllowedResource`](./data-types.md#Azure.ResourceManager.ResourceIdentifierAllowedResource)
 - [`ResourceInstanceParameters`](./data-types.md#Azure.ResourceManager.ResourceInstanceParameters)
