--- a/docs/libraries/azure-resource-manager/reference/index.mdx
+++ b/docs/libraries/azure-resource-manager/reference/index.mdx
@@ -37,7 +37,6 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 
 ### Decorators
 
-- [`@armBuiltInResource`](./decorators.md#@Azure.ResourceManager.armBuiltInResource)
 - [`@armCommonTypesVersion`](./decorators.md#@Azure.ResourceManager.armCommonTypesVersion)
 - [`@armLibraryNamespace`](./decorators.md#@Azure.ResourceManager.armLibraryNamespace)
 - [`@armProviderNamespace`](./decorators.md#@Azure.ResourceManager.armProviderNamespace)
@@ -51,6 +50,7 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`@armResourceOperations`](./decorators.md#@Azure.ResourceManager.armResourceOperations)
 - [`@armResourceRead`](./decorators.md#@Azure.ResourceManager.armResourceRead)
 - [`@armResourceUpdate`](./decorators.md#@Azure.ResourceManager.armResourceUpdate)
+- [`@armVirtualResource`](./decorators.md#@Azure.ResourceManager.armVirtualResource)
 - [`@extensionResource`](./decorators.md#@Azure.ResourceManager.extensionResource)
 - [`@locationResource`](./decorators.md#@Azure.ResourceManager.locationResource)
 - [`@resourceBaseType`](./decorators.md#@Azure.ResourceManager.resourceBaseType)
