Update docs/howtos/DataPlane Generation - DPG/05union.mdx

--- a/docs/howtos/DataPlane Generation - DPG/05union.mdx
+++ b/docs/howtos/DataPlane Generation - DPG/05union.mdx
@@ -299,7 +299,7 @@ public Response<long> Foo(string x, Cancellation token);
 <TabItem value="typescript" label="Typescript" >
 
 ```typescript
-NOT_SUPPORTED;
+JS RLC is not in the business of customization with client.tsp
 ```
 
 </TabItem>
