--- a/docs/howtos/DataPlane Generation - DPG/05union.mdx
+++ b/docs/howtos/DataPlane Generation - DPG/05union.mdx
@@ -97,7 +97,35 @@ namespace Analyze
 <TabItem value="typescript" label="Typescript" >
 
 ```typescript
-FIXME;
+// from user experience perspective
+
+export interface CompletionInput {
+  input: string | string[];
+}
+
+export type DemoServiceContext = Client & {
+  path: {
+    /** Resource for '/analyze' has methods for the following verbs: post */
+    (path: "/analyze"): {
+      post(
+        options: {
+          body: string;
+          queryParameters: {
+            mode: "strict" | "lenient";
+          };
+        } & RequestParameters
+      ): StreamableMethod<Analyze200Response | AnalyzeDefaultResponse>;
+    };
+    /** Resource for '/completions' has methods for the following verbs: post */
+    (path: "/completions"): {
+      post(
+        options: {
+          body: CompletionInput;
+        } & RequestParameters
+      ): StreamableMethod<Completions200Response | CompletionsDefaultResponse>;
+    };
+  };
+};
 ```
 
 </TabItem>
@@ -170,7 +198,29 @@ public Response<long> B(string x, Cancellation token);
 <TabItem value="typescript" label="Typescript" >
 
 ```typescript
-FIXME;
+// from user experience perspective
+
+export type DemoServiceContext = Client & {
+  path: {
+    /** Resource for '/foo' has methods for the following verbs: post */
+    (path: "/foo"): {
+      post(
+        options?: {
+          body?: {
+            x: number;
+          };
+        } & RequestParameters
+      ): StreamableMethod<A200Response>;
+      post(
+        options?: {
+          body?: {
+            x: string;
+          };
+        } & RequestParameters
+      ): StreamableMethod<B200Response>;
+    };
+  };
+};
 ```
 
 </TabItem>
@@ -249,7 +299,7 @@ public Response<long> Foo(string x, Cancellation token);
 <TabItem value="typescript" label="Typescript" >
 
 ```typescript
-FIXME;
+JS RLC is not in the business of customization with client.tsp
 ```
 
 </TabItem>
