--- a/docs/release-notes/release-2024-02-06.md
+++ b/docs/release-notes/release-2024-02-06.md
@@ -4,10 +4,6 @@ title: February 2024
 
 # Release Notes February 2024 (2024-02-06)
 
-:::danger
-This release contains **breaking changes**
-:::
-
 See TypeSpec Core [release notes](https://typespec.io/docs/release-notes/release-2024-02-06)
 
 ## New Features
@@ -23,6 +19,13 @@ See TypeSpec Core [release notes](https://typespec.io/docs/release-notes/release
 - Add support for creating an `enum` from a `union` declaration
 - tcgc will return the raw tsp types to emitters, instead of doing more conversion
 
+### `@azure-tools/typespec-azure-resource-manager` New features
+
+- Add mechanism for additional path segments See example:
+  - Location resources https://github.com/Azure/typespec-azure/blob/main/packages/samples/specs/resource-manager/arm-scenarios/location-resource/main.tsp
+  - Add extra path segments https://github.com/Azure/typespec-azure/tree/main/packages/samples/specs/resource-manager/arm-scenarios/virtual-resource
+- Update references to ARM, Add template customization parameters, add migration docs
+
 ## Bug Fixes
 
 ### `@azure-tools/typespec-autorest` Bug Fixes
@@ -33,13 +36,8 @@ See TypeSpec Core [release notes](https://typespec.io/docs/release-notes/release
 
 ### `@azure-tools/typespec-azure-resource-manager` Bug Fixes
 
-- Fix Location resource issue, add mechanism for additional path segments
-- Update references to ARM, Add template customization parameters, add migration docs
+- Fix Location resource issue
 
 ### `@azure-tools/typespec-client-generator-core` Bug Fixes
 
 - fix incorrect linter error for models not directly used in multipart operations
-
-## Breaking Changes
-
-- Azure Resource Mangager types documentation have changed. This would affect the genrated autorest swagger files.
