--- a/packages/website/versioned_docs/version-latest/howtos/DataPlane Generation - DPG/03convenient.mdx
+++ b/packages/website/versioned_docs/version-latest/howtos/DataPlane Generation - DPG/03convenient.mdx
@@ -45,7 +45,26 @@ FIXME
 <TabItem value="csharp" label="CSharp" >
 
 ```csharp
-FIXME
+namespace PetStoreNamespace.Models
+{
+  public partial class OutputModel
+  {
+    public string Name { get; }
+  }
+}
+
+namespace PetStoreNamespace
+{
+  public partial class PetStoreNamespaceClient
+  {
+    // protocol method
+    public virtual async Task<Response> GetModelAsync(string name, RequestContext context) {}
+    public virtual Response GetModel(string name, RequestContext context) {}
+    // convenience method
+    public virtual async Task<Response<OutputModel>> GetModelAsync(string name, CancellationToken cancellationToken = default) {}
+    public virtual Response<OutputModel> GetModel(string name, CancellationToken cancellationToken = default) {}
+  }
+}
 ```
 
 </TabItem>
@@ -63,7 +82,18 @@ const model: OutputModel = await client.path("/petStore/model/{name}").get();
 <TabItem value="java" label="Java" >
 
 ```java
-FIXME
+package com.petstorenamespace.models;
+public final class OutputModel {
+    public String getName()
+}
+
+package com.petstorenamespace;
+public final class PetStoreNamespaceClient {
+    // protocol method
+    public Response<BinaryData> getModelWithResponse(String name, RequestOptions requestOptions)
+    // convenient method
+    public OutputModel getModel(String name)
+}
 ```
 
 </TabItem>
@@ -109,7 +139,18 @@ using Azure.ClientGenerator.Core;
 <TabItem value="csharp" label="CSharp" >
 
 ```c#
-FIXME
+// Model class is not generated.
+// Convenient method is not generated.
+
+namespace PetStoreNamespace
+{
+  public partial class PetStoreNamespaceClient
+  {
+    // protocol method
+    public virtual async Task<Response> GetModelAsync(string name, RequestContext context) {}
+    public virtual Response GetModel(string name, RequestContext context) {}
+  }
+}
 ```
 
 </TabItem>
@@ -123,7 +164,13 @@ FIXME
 <TabItem value="java" label="Java" >
 
 ```java
-FIXME
+// Model class is not generated.
+// Convenient method is not generated.
+
+public final class PetStoreNamespaceClient {
+    // protocol method
+    public Response<BinaryData> getModelWithResponse(String name, RequestOptions requestOptions)
+}
 ```
 
 </TabItem>
@@ -160,7 +207,27 @@ class _GetModel:
 <TabItem value="csharp" label="CSharp" >
 
 ```csharp
-FIXME
+// Model class is internal
+namespace PetStoreNamespace.Models
+{
+  internal partial class OutputModel
+  {
+    public string Name { get; }
+  }
+}
+// Client method is internal
+namespace PetStoreNamespace
+{
+  public partial class PetStoreNamespaceClient
+  {
+    //protocol method
+    internal virtual async Task<Response> GetModelAsync(string name, RequestContext context) {}
+    internal virtual Response GetModel(string name, RequestContext context) {}
+    //convenience method
+    internal virtual async Task<Response<OutputModel>> GetModelAsync(string name, CancellationToken cancellationToken = default) {}
+    internal virtual Response<OutputModel> GetModel(string name, CancellationToken cancellationToken = default) {}
+  }
+}
 ```
 
 </TabItem>
@@ -174,7 +241,21 @@ FIXME
 <TabItem value="java" label="Java" >
 
 ```java
-FIXME
+// Model class resides in implementation package.
+// Client method is package private.
+
+package com.petstorenamespace.implementation.models;
+public final class OutputModel {
+    public String getName()
+}
+
+package com.petstorenamespace;
+public final class PetStoreNamespaceClient {
+    // protocol method
+    Response<BinaryData> getModelWithResponse(String name, RequestOptions requestOptions)
+    // convenient method
+    OutputModel getModel(String name)
+}
 ```
 
 </TabItem>
@@ -187,7 +268,7 @@ changes the way the API is exposed for those models.
 
 By default, the code generator will infer the usage based on the TypeSpec. If this inference doesn't
 correspond to expectation, this can be customized with the `usage` decorator. Possible values are
-`input` and `ouput`, and can be combined with `Usage.input | Usage.output`.
+`input` and `output`, and can be combined with `Usage.input | Usage.output`.
 
 > **NOTE:** If a model is never used, it will not be generated. Assigning a usage will force generation.
 
@@ -219,7 +300,39 @@ using Azure.ClientGenerator.Core;
 <TabItem value="csharp" label="CSharp" >
 
 ```csharp
-FIXME
+// If a model is input-only, it has one public constructor with all required properties as parameters.
+// The required properties only have getter. Optional properties have both getter and setter.
+// A collection property which is not nullable only has getter whatever it is required or not.
+namespace Azure.AI.OpenAI.Models
+{
+  public partial class AzureCognitiveSearchIndexFieldMappingOptions
+  {
+    public AzureCognitiveSearchIndexFieldMappingOptions()
+
+    public string TitleFieldName { get; set; }
+    public string UrlFieldName { get; set; }
+    public string FilepathFieldName { get; set; }
+    public IList<string> ContentFieldNames { get; }
+    public string ContentFieldSeparator { get; set; }
+    public IList<string> VectorFieldNames { get; }
+    public IList<string> ImageVectorFieldNames { get; }
+  }
+}
+// If a model is output-only, it does not have any public constructor, and all properties only have getter, no setter.
+
+// If a model is roundtrip (input + output), it has one public constructor with all required properties as parameters.
+// All properties except colletion properties which are not nullable will have both getter and setter.
+// A collection property which is not nullable only has getter.
+namespace Azure.AI.OpenAI.Models
+{
+  public partial class ImageGenerations
+  {
+    public ImageGenerations(DateTimeOffset created, IEnumerable<ImageGenerationData> data)
+
+    public DateTimeOffset Created { get; set; }
+    public IList<ImageGenerationData> Data { get; }
+  }
+}
 ```
 
 </TabItem>
@@ -235,7 +348,23 @@ FIXME
 <TabItem value="java" label="Java" >
 
 ```java
-FIXME
+// If a model class is output-only, its constructor is not public.
+// Adding Usage.input to it would make its constructor public.
+
+package com.azure.ai.openai.models;
+
+public final class AzureCognitiveSearchIndexFieldMappingOptions {
+    public AzureCognitiveSearchIndexFieldMappingOptions()
+    public String getTitleField()
+    public AzureCognitiveSearchIndexFieldMappingOptions setTitleField(String titleField)
+    ...
+}
+
+public final class ImageGenerations {
+    public ImageGenerations(OffsetDateTime createdAt, List<ImageGenerationData> data)
+    public OffsetDateTime getCreatedAt()
+    public List<ImageGenerationData> getData()
+}
 ```
 
 </TabItem>
