--- a/packages/website/versioned_docs/version-latest/howtos/DataPlane Generation - DPG/05union.mdx
+++ b/packages/website/versioned_docs/version-latest/howtos/DataPlane Generation - DPG/05union.mdx
@@ -14,6 +14,11 @@ At a glance, JS and Python supports natively union, while Java and C# will use o
 <TabItem value="typespec" label="TypeSpec" default>
 
 ```typespec
+@service({
+  title: "Analyze",
+  version: "v1",
+})
+namespace Analyze;
 @route("/analyze")
 @post
 op analyze(@query mode: "strict" | "lenient", @body image: bytes): AnalyzeResult;
@@ -46,21 +51,103 @@ def completions(input: CompletionInput) -> CompletionResult:
 <TabItem value="csharp" label="CSharp" >
 
 ```csharp
-FIXME
+// Union "strict" | "lenient" will be generate as extensible enum
+namespace Analyze.Models
+{
+  public readonly partial struct Mode : IEquatable<Mode>
+  {
+    public static Mode Strict { get; } = new Mode(StrictValue);
+    public static Mode Lenient { get; } = new Mode(LenientValue);
+  }
+}
+
+// other union which cannot be convert to enum will generate as BinaryData
+namespace Analyze.Models
+{
+  public partial class CompletionInput
+  {
+    public CompletionInput(BinaryData input)
+    public BinaryData Input { get; }
+  }
+}
+namespace Analyze
+{
+  public partial class AnalyzeClient
+  {
+    //protocol method
+    public virtual async Task<Response> AnalyzeAsync(string mode, RequestContent content, RequestContext context = null) {}
+    public virtual Response Analyze(string mode, RequestContent content, RequestContext context = null) {}
+    //convenience method
+    public virtual async Task<Response<AnalyzeResult>> AnalyzeAsync(Mode mode, BinaryData image, CancellationToken cancellationToken = default) {}
+    public virtual Response<AnalyzeResult> Analyze(Mode mode, BinaryData image, CancellationToken cancellationToken = default) {}
+
+
+    //protocol method
+    public virtual async Task<Response> CompletionsAsync(RequestContent content, RequestContext context = null) {}
+    public virtual Response Completions(RequestContent content, RequestContext context = null) {}
+    //convenience method
+    public virtual async Task<Response<CompletionResult>> CompletionsAsync(CompletionInput input, CancellationToken cancellationToken = default) {}
+    public virtual Response<CompletionResult> Completions(CompletionInput input, CancellationToken cancellationToken = default) {}
+
+  }
+}
 ```
 
 </TabItem>
 <TabItem value="typescript" label="Typescript" >
 
 ```typescript
-FIXME;
+// from user experience perspective
+
+export interface CompletionInput {
+  input: string | string[];
+}
+
+export type DemoServiceContext = Client & {
+  path: {
+    /** Resource for '/analyze' has methods for the following verbs: post */
+    (path: "/analyze"): {
+      post(
+        options: {
+          body: string;
+          queryParameters: {
+            mode: "strict" | "lenient";
+          };
+        } & RequestParameters
+      ): StreamableMethod<Analyze200Response | AnalyzeDefaultResponse>;
+    };
+    /** Resource for '/completions' has methods for the following verbs: post */
+    (path: "/completions"): {
+      post(
+        options: {
+          body: CompletionInput;
+        } & RequestParameters
+      ): StreamableMethod<Completions200Response | CompletionsDefaultResponse>;
+    };
+  };
+};
 ```
 
 </TabItem>
 <TabItem value="java" label="Java" >
 
 ```java
-FIXME
+public enum Mode {
+    STRICT("strict"),
+    LENIENT("lenient");
+}
+
+public final class CompletionInput {
+    public CompletionInput(BinaryData input)
+    public BinaryData getInput()
+}
+
+public final class AnalyzeClient {
+    public Response<BinaryData> analyzeWithResponse(String mode, BinaryData image, RequestOptions requestOptions)
+    public Response<BinaryData> completionsWithResponse(BinaryData input, RequestOptions requestOptions)
+    public AnalyzeResult analyze(Mode mode, byte[] image)
+    public CompletionResult completions(CompletionInput input)
+}
 ```
 
 </TabItem>
@@ -73,10 +160,12 @@ you must use `@sharedRoute`. By default, codegen will generate one method per op
 <TabItem value="typespec" label="TypeSpec" default>
 
 ```typespec
-@sharedRoute("/foo")
-op a(x: int): float;
+@sharedRoute
+@route("/foo")
+op a(x: int32): float;
 
-@sharedRoute("/foo")
+@sharedRoute
+@route("/foo")
 op b(x: string): int64;
 ```
 
@@ -109,14 +198,41 @@ public Response<long> B(string x, Cancellation token);
 <TabItem value="typescript" label="Typescript" >
 
 ```typescript
-FIXME;
+// from user experience perspective
+
+export type DemoServiceContext = Client & {
+  path: {
+    /** Resource for '/foo' has methods for the following verbs: post */
+    (path: "/foo"): {
+      post(
+        options?: {
+          body?: {
+            x: number;
+          };
+        } & RequestParameters
+      ): StreamableMethod<A200Response>;
+      post(
+        options?: {
+          body?: {
+            x: string;
+          };
+        } & RequestParameters
+      ): StreamableMethod<B200Response>;
+    };
+  };
+};
 ```
 
 </TabItem>
 <TabItem value="java" label="Java" >
 
 ```java
-FIXME
+public final class Client {
+    public Response<BinaryData> aWithResponse(BinaryData request, RequestOptions requestOptions)
+    public Response<BinaryData> bWithResponse(BinaryData request, RequestOptions requestOptions)
+    public double a(int x)
+    public long b(String x)
+}
 ```
 
 </TabItem>
@@ -133,10 +249,12 @@ If your shared routes are actually one unique semantic operation, you may want t
 
 ```typescript
 // main.tsp
-@sharedRoute("/foo")
+@sharedRoute
+@route("/foo")
 op a(x: int) : float
 
-@sharedRoute("/foo")
+@sharedRoute
+@route("/foo")
 op b(x: string) : int64
 
 // client.tsp
@@ -181,14 +299,14 @@ public Response<long> Foo(string x, Cancellation token);
 <TabItem value="typescript" label="Typescript" >
 
 ```typescript
-FIXME;
+JS RLC is not in the business of customization with client.tsp
 ```
 
 </TabItem>
 <TabItem value="java" label="Java" >
 
 ```java
-FIXME
+NOT_SUPPORTED
 ```
 
 </TabItem>
