--- a/packages/website/versioned_docs/version-latest/libraries/azure-resource-manager/reference/index.mdx
+++ b/packages/website/versioned_docs/version-latest/libraries/azure-resource-manager/reference/index.mdx
@@ -50,8 +50,10 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`@armResourceOperations`](./decorators.md#@Azure.ResourceManager.armResourceOperations)
 - [`@armResourceRead`](./decorators.md#@Azure.ResourceManager.armResourceRead)
 - [`@armResourceUpdate`](./decorators.md#@Azure.ResourceManager.armResourceUpdate)
+- [`@armVirtualResource`](./decorators.md#@Azure.ResourceManager.armVirtualResource)
 - [`@extensionResource`](./decorators.md#@Azure.ResourceManager.extensionResource)
 - [`@locationResource`](./decorators.md#@Azure.ResourceManager.locationResource)
+- [`@resourceBaseType`](./decorators.md#@Azure.ResourceManager.resourceBaseType)
 - [`@resourceGroupResource`](./decorators.md#@Azure.ResourceManager.resourceGroupResource)
 - [`@singleton`](./decorators.md#@Azure.ResourceManager.singleton)
 - [`@subscriptionResource`](./decorators.md#@Azure.ResourceManager.subscriptionResource)
@@ -122,6 +124,7 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`ArmDeleteAcceptedResponse`](./data-types.md#Azure.ResourceManager.ArmDeleteAcceptedResponse)
 - [`ArmDeletedNoContentResponse`](./data-types.md#Azure.ResourceManager.ArmDeletedNoContentResponse)
 - [`ArmDeletedResponse`](./data-types.md#Azure.ResourceManager.ArmDeletedResponse)
+- [`ArmLocationResource`](./data-types.md#Azure.ResourceManager.ArmLocationResource)
 - [`ArmLroLocationHeader`](./data-types.md#Azure.ResourceManager.ArmLroLocationHeader)
 - [`ArmNoContentResponse`](./data-types.md#Azure.ResourceManager.ArmNoContentResponse)
 - [`ArmOperationStatus`](./data-types.md#Azure.ResourceManager.ArmOperationStatus)
@@ -155,6 +158,7 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 - [`PrivateLinkServiceConnectionState`](./data-types.md#Azure.ResourceManager.PrivateLinkServiceConnectionState)
 - [`ProviderNamespace`](./data-types.md#Azure.ResourceManager.ProviderNamespace)
 - [`ProxyResource`](./data-types.md#Azure.ResourceManager.ProxyResource)
+- [`ResourceGroupLocationResource`](./data-types.md#Azure.ResourceManager.ResourceGroupLocationResource)
 - [`ResourceGroupParameter`](./data-types.md#Azure.ResourceManager.ResourceGroupParameter)
 - [`ResourceIdentifierAllowedResource`](./data-types.md#Azure.ResourceManager.ResourceIdentifierAllowedResource)
 - [`ResourceInstanceParameters`](./data-types.md#Azure.ResourceManager.ResourceInstanceParameters)
@@ -175,6 +179,9 @@ npm install --save-peer @azure-tools/typespec-azure-resource-manager
 
 ### Operations
 
+- [`ArmCreateOperation`](./interfaces.md#Azure.ResourceManager.Foundations.ArmCreateOperation)
+- [`ArmReadOperation`](./interfaces.md#Azure.ResourceManager.Foundations.ArmReadOperation)
+- [`ArmUpdateOperation`](./interfaces.md#Azure.ResourceManager.Foundations.ArmUpdateOperation)
 - [`checkNameAvailability`](./interfaces.md#Azure.ResourceManager.Foundations.checkNameAvailability)
 
 ### Models
