Azure `Page` type `nextLink` properties should be `readOnly: true`

--- a/packages/samples/test/output/azure/core/data-plane/language/authoring/@azure-tools/typespec-autorest/openapi.json
+++ b/packages/samples/test/output/azure/core/data-plane/language/authoring/@azure-tools/typespec-autorest/openapi.json
@@ -1191,7 +1191,8 @@
         "nextLink": {
           "type": "string",
           "format": "uri",
-          "description": "The link to the next page of items"
+          "description": "The link to the next page of items",
+          "readOnly": true
         }
       },
       "required": [
@@ -1213,7 +1214,8 @@
         "nextLink": {
           "type": "string",
           "format": "uri",
-          "description": "The link to the next page of items"
+          "description": "The link to the next page of items",
+          "readOnly": true
         }
       },
       "required": [
@@ -1235,7 +1237,8 @@
         "nextLink": {
           "type": "string",
           "format": "uri",
-          "description": "The link to the next page of items"
+          "description": "The link to the next page of items",
+          "readOnly": true
         }
       },
       "required": [
@@ -1257,7 +1260,8 @@
         "nextLink": {
           "type": "string",
           "format": "uri",
-          "description": "The link to the next page of items"
+          "description": "The link to the next page of items",
+          "readOnly": true
         }
       },
       "required": [
