--- a/packages/samples/test/output/azure/core/data-plane/language/authoring/@typespec/openapi3/openapi.yaml
+++ b/packages/samples/test/output/azure/core/data-plane/language/authoring/@typespec/openapi3/openapi.yaml
@@ -901,6 +901,7 @@ components:
           type: string
           format: uri
           description: The link to the next page of items
+          readOnly: true
       description: Paged collection of Deployment items
     PagedProject:
       type: object
@@ -916,6 +917,7 @@ components:
           type: string
           format: uri
           description: The link to the next page of items
+          readOnly: true
       description: Paged collection of Project items
     PagedSupportedLanguage:
       type: object
@@ -931,6 +933,7 @@ components:
           type: string
           format: uri
           description: The link to the next page of items
+          readOnly: true
       description: A collection of SupportedLanguage resources.
     PagedTrainingConfigVersion:
       type: object
@@ -946,6 +949,7 @@ components:
           type: string
           format: uri
           description: The link to the next page of items
+          readOnly: true
       description: A collection of TrainingConfigVersion resources.
     Project:
       type: object
